--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,62 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+  <group>
+    <clip-path
+        android:pathData="M0,0h108v108h-108z"/>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M30.22,69.74 L73.79,112.98 126.24,115.89 120.81,89.61 120.7,75.59 78,37.19l-0.8,32z"
+        android:strokeAlpha="0.0606794"
+        android:strokeWidth="0.626"
+        android:fillColor="#000000"
+        android:fillAlpha="0.0606794"/>
+  </group>
+  <path
+      android:pathData="M74,37.19L74,63.07L70.22,62.06A25.6,25.6 121.17,0 0,54.11 63.03L54,63.07 53.89,63.03A25.6,25.6 94.92,0 0,37.78 62.06L34,63.07L34,37.19L30.8,37.19l0,32l16.8,0a2.4,2.4 0,0 1,2.4 2.4l8,0a2.4,2.4 0,0 1,2.4 -2.4L77.2,69.19L77.2,37.19Z"
+      android:fillColor="#745944"/>
+  <path
+      android:pathData="M38.8,62.79l6.4,0l0,12l-3.2,-2.4l-3.2,2.4z"
+      android:fillColor="#ffdcc3"/>
+  <path
+      android:pathData="M37.78,62.06 L34,63.07l0,3.2l3.78,-1.01a25.6,25.6 0,0 1,16.1 0.97L54,66.27l0,-3.2L53.89,63.03A25.6,25.6 94.92,0 0,37.78 62.06Z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="M54.11,63.03 L54,63.07l0,3.2l0.11,-0.04A25.6,25.6 121.17,0 1,70.22 65.26L74,66.27l0,-3.2l-3.78,-1.01a25.6,25.6 121.17,0 0,-16.1 0.97z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="M45.49,57.19A8,8 0,0 1,37.78 49.19L37.78,33.99L34,35.07l0,28l3.78,-1.01a25.6,25.6 0,0 1,16.1 0.97L54,63.07l0,-4L53.89,59.03A25.46,25.46 0,0 0,45.49 57.19Z"
+      android:fillColor="#ffdcc3"/>
+  <path
+      android:pathData="M65.34,57.25A8,8 100.28,0 1,58 49.19L58,33.82A24.8,24.8 0,0 0,54.11 35.03L54,35.07l0,28l0.11,-0.04A25.6,25.6 121.17,0 1,70.22 62.06L74,63.07l0,-4l-3.78,-1.01a26.11,26.11 135,0 0,-4.88 -0.81z"
+      android:fillColor="#ffdcc3"/>
+  <path
+      android:pathData="M77.2,36.39L74.8,36.39L74.8,35.07a0.8,0.8 0,0 0,-0.59 -0.8L70.42,33.28A26.62,26.62 0,0 0,54 34.22,26.62 26.62,135 0,0 37.58,33.28L33.79,34.3A0.8,0.8 0,0 0,33.2 35.1L33.2,36.39L30.8,36.39a0.8,0.8 0,0 0,-0.8 0.8l0,32a0.8,0.8 0,0 0,0.8 0.8l7.2,0l0,4.8a0.8,0.8 0,0 0,0.44 0.71,0.8 0.8,0 0,0 0.8,-0.07L42,73.39 44.72,75.43A0.8,0.8 0,0 0,45.2 75.59,0.73 0.73,45 0,0 45.56,75.51 0.8,0.8 0,0 0,46 74.79l0,-4.8l1.6,0a1.6,1.6 0,0 1,1.6 1.6,0.8 0.8,0 0,0 0.8,0.8l8,0a0.8,0.8 0,0 0,0.8 -0.8,1.6 1.6,0 0,1 1.6,-1.6l16.8,0a0.8,0.8 0,0 0,0.8 -0.8L78,37.19A0.8,0.8 0,0 0,77.2 36.39ZM37.58,64.48 L34.8,65.19l0,-1.51l3.2,-0.85a24.96,24.96 45,0 1,15.2 0.8L53.2,65.11A26.59,26.59 45,0 0,37.58 64.48ZM54.8,63.59a24.96,24.96 45,0 1,15.2 -0.8l3.2,0.85L73.2,65.19L70.42,64.45A26.66,26.66 0,0 0,54.8 65.13ZM70,34.79 L73.2,35.64L73.2,61.99L70.42,61.25A26.57,26.57 135,0 0,54.8 61.91L54.8,35.59A24.96,24.96 45,0 1,70 34.83ZM34.8,35.68 L38,34.83A24.96,24.96 0,0 1,53.2 35.59L53.2,61.91A26.59,26.59 45,0 0,37.58 61.28L34.8,61.99ZM31.6,68.39L31.6,37.99l1.6,0l0,28.27a0.8,0.8 0,0 0,0.31 0.64,0.8 0.8,0 0,0 0.49,0.16 0.92,0.92 0,0 0,0.21 0L38,66.03l0,0 0,2.4zM44.4,73.19 L42.48,71.75a0.8,0.8 0,0 0,-0.96 0L39.6,73.19L39.6,65.67A24.22,24.22 45,0 1,44.4 65.19ZM76.4,68.39L60.4,68.39a3.2,3.2 0,0 0,-3.1 2.4L50.7,70.79A3.2,3.2 0,0 0,47.6 68.39l-1.6,0l0,-3.14a24.57,24.57 45,0 1,7.59 1.71l0.11,0.04A0.8,0.8 52.49,0 0,54.4 66.95l0,0A24.93,24.93 0,0 1,70 66.03l3.78,1.01a0.8,0.8 0,0 0,1.01 -0.8L74.79,37.99l1.6,0z"
+      android:strokeWidth="0.8"
+      android:fillColor="#2f1500"/>
+  <path
+      android:pathData="m39.75,46.44a24.55,24.55 0,0 1,9.3 0L49.2,46.44a0.8,0.8 135,0 0,0.15 -1.6,26.27 26.27,45 0,0 -9.9,0 0.8,0.8 0,0 0,-0.65 0.96,0.8 0.8,0 0,0 0.95,0.64z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="m39.75,41.64a24.55,24.55 0,0 1,9.3 0L49.2,41.64a0.8,0.8 135,0 0,0.15 -1.6,26.27 26.27,45 0,0 -9.9,0 0.8,0.8 0,0 0,-0.65 0.96,0.8 0.8,0 0,0 0.95,0.64z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="m58.8,41.67l0.15,0a24.55,24.55 0,0 1,9.3 0,0.81 0.81,45 0,0 0.3,-1.6 26.27,26.27 0,0 0,-9.9 0,0.8 0.8,135 0,0 0.15,1.6z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="m58.8,46.47l0.15,0a24.55,24.55 135,0 1,9.3 0,0.81 0.81,0 0,0 0.3,-1.6 26.27,26.27 45,0 0,-9.9 0,0.8 0.8,135 0,0 0.15,1.6z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="m58.8,56.07l0.15,0a24.55,24.55 0,0 1,9.3 0,0.81 0.81,0 0,0 0.3,-1.6 26.27,26.27 45,0 0,-9.9 0,0.8 0.8,135 0,0 0.15,1.6z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="m58.8,51.27l0.15,0a24.55,24.55 135,0 1,9.3 0,0.81 0.81,0 0,0 0.3,-1.6 26.27,26.27 45,0 0,-9.9 0,0.8 0.8,135 0,0 0.15,1.6z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="m39.75,51.24a24.55,24.55 0,0 1,9.3 0L49.2,51.24a0.8,0.8 135,0 0,0.15 -1.6,26.27 26.27,45 0,0 -9.9,0 0.8,0.8 0,0 0,-0.65 0.96,0.8 0.8,0 0,0 0.95,0.64z"
+      android:fillColor="#904d00"/>
+  <path
+      android:pathData="m39.75,56.04a24.55,24.55 0,0 1,9.3 0L49.2,56.04a0.8,0.8 135,0 0,0.15 -1.6,26.27 26.27,45 0,0 -9.9,0 0.8,0.8 0,0 0,-0.65 0.96,0.8 0.8,0 0,0 0.95,0.64z"
+      android:fillColor="#904d00"/>
 </vector>
